--- a/package.json
+++ b/package.json
@@ -24,11 +24,18 @@
     "lint-fix": "pnpm lint --fix",
     "test": "vitest",
     "coverage": "vitest --coverage",
+    "start": "tsx src/Program.ts",
+    "perf": "tsx src/Program.ts",
     "changeset-version": "changeset version && node scripts/version.mjs",
     "changeset-publish": "pnpm build && TEST_DIST= pnpm vitest && changeset publish"
   },
   "dependencies": {
-    "effect": "^3.17.7"
+    "effect": "latest",
+    "@effect/sql": "latest",
+    "@effect/sql-sqlite-node": "latest",
+    "@effect/sql-sqlite-bun": "latest",
+    "@effect/sql-sqlite-wasm": "latest",
+    "@effect/sql-libsql": "latest"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.8",
@@ -37,10 +44,10 @@
     "@babel/plugin-transform-modules-commonjs": "^7.24.8",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.8",
-    "@effect/build-utils": "^0.8.9",
-    "@effect/eslint-plugin": "^0.3.2",
+    "@effect/build-utils": "latest",
+    "@effect/eslint-plugin": "latest",
     "@effect/language-service": "latest",
-    "@effect/vitest": "^0.25.1",
+    "@effect/vitest": "latest",
     "@eslint/compat": "1.1.1",
     "@eslint/eslintrc": "3.1.0",
     "@eslint/js": "9.10.0",
@@ -71,8 +78,6 @@
     }
   },
   "pnpm": {
-    "patchedDependencies": {
-      "@changesets/get-github-info@0.6.0": "patches/@changesets__get-github-info@0.6.0.patch"
-    }
+    "patchedDependencies": {}
   }
 }
