--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "changeset-publish": "pnpm build && TEST_DIST= pnpm vitest && changeset publish"
   },
   "dependencies": {
+    "@effect/experimental": "latest",
     "@effect/sql": "latest",
     "@effect/sql-libsql": "latest",
     "@effect/sql-sqlite-bun": "latest",
     "@effect/sql-sqlite-node": "latest",
     "@effect/sql-sqlite-wasm": "latest",
+    "@electric-sql/pglite": "^0.3.14",
     "@libsql/client": "^0.12.0",
     "@sqlite.org/sqlite-wasm": "3.51.1-build2",
     "better-sqlite3": "^11.10.0",
